# effective_engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  Demo.md  Plan.md  Readme.md  Risk_Calibration.md  alpha.md
data/: market_data.csv  options_AAPL.csv  spot_AAPL.csv
demo/: CMakeLists.txt  Readme.md
demo/artifacts/: Y0_init.json  neural_bsde.onnx  neural_bsde.onnx.data  normalization.json  oos_dW1.npy  oos_states_raw.npy  training_dW1.npy  training_payoff.npy  training_tau_grid.npy
demo/artifacts/checkpoints/: best.pt  epoch_0050.pt  epoch_0100.pt  epoch_0150.pt  epoch_0200.pt  epoch_0250.pt  epoch_0300.pt  epoch_0350.pt  epoch_0400.pt  epoch_0450.pt  epoch_0500.pt  epoch_0550.pt  epoch_0600.pt
demo/cpp/: AlphaPnLTracker.hpp  HistoricalChainAdapter.hpp  LiftedHestonSim.cpp  NeuralBSDEHedger.hpp  OnnxInference.cpp  OnnxInference.hpp  RoughVolCalibrator.hpp  SimpleExecSim.hpp  StrategyController.hpp  SyntheticOptionFeed.hpp  VarianceAlphaSignal.hpp  alpha_main.cpp  alpha_pnl_test.cpp  main.cpp
demo/cpp/analytics/: LiftedHestonSim.hpp  LiftedHestonStateEstimator.hpp  RoughVolCalibrator.hpp  RoughVolSmilePredictor.hpp  SmileVarianceExtractor.hpp
demo/cpp/execution/: OnnxInference.cpp  OnnxInference.hpp  SimpleExecSim.hpp
demo/cpp/feed/: HistoricalChainAdapter.hpp
demo/cpp/pnl/: AlphaPnLTracker.hpp  ExtendedPnLTracker.hpp
demo/cpp/signal/: CompositeAlphaSignal.hpp  DownsideVRPSignal.hpp  HARRealizedVolSignal.hpp  IVAutocorrSignal.hpp  LogIVRVRatioSignal.hpp  RealizedSkewnessSignal.hpp  SkewCurvatureAlphaSignal.hpp  VRPAlphaSignal.hpp  VarianceAlphaSignal.hpp
demo/cpp/strategy/: NeuralBSDEHedger.hpp  StrategyController.hpp
demo/cpp/utils/: NpyWriter.hpp
demo/python/: data_loader.py  export.py  trainer.py
demo/python/bsde/: calibrate_and_retrain.py  export.py  extract_real_paths.py  generate_is_synthetic.py  model.py  trainer.py
demo/python/bsde/artifacts_is/: Y0_init.json  neural_bsde_is_delta.onnx  normalization.json  normalization_is.json  real_is_dW1.npy  real_is_meta.json  real_is_payoff.npy  real_is_states_raw.npy  real_is_tau_grid.npy  training_dW1.npy  training_payoff.npy  training_tau_grid.npy
demo/python/bsde/artifacts_is/checkpoints/: best.pt  best_full.pt  epoch_0050.pt  epoch_0100.pt  epoch_0150.pt  epoch_0200.pt  epoch_0250.pt  epoch_0300.pt  epoch_0350.pt  epoch_0400.pt  epoch_0450.pt  epoch_0500.pt
demo/python/configs/: bs_validation.yaml  lifted_rough_heston.yaml  lifted_rough_heston_delta.yaml
demo/python/data_prep/: prepare_spy_data.py
demo/python/research/cache/: gate0_days5_farF.pkl  gate0a_7_60_days3_farF.pkl  gate0b_days1_farF.pkl  gate0b_days2_farF.pkl  gate0b_days5_farF.pkl
demo/python/research/conditional_dynamics/: benchmark.py  gate0b_sweep.py  gate1b_sweep.py  gate3_sweep.py  gate5_sweep.py
demo/python/research/conditional_dynamics/output/: conditional_120min_20260409_121913.txt  gate0b_sweep_20260409_173725.csv  gate0b_sweep_20260409_173725.txt  gate0b_sweep_20260409_182818.csv  gate0b_sweep_20260409_182818.txt  gate0b_sweep_20260409_192435.csv  gate0b_sweep_20260409_192850.txt  gate0b_sweep_20260409_193820.csv  gate0b_sweep_20260409_193857.csv  gate0b_sweep_20260409_193956.csv  gate0b_sweep_20260409_195415.txt  gate0b_sweep_20260409_202600.csv  gate0b_sweep_20260409_202600.txt  gate0b_sweep_20260410_064855.csv  gate0b_sweep_20260410_064855.txt  gate0b_sweep_20260410_064932.csv  gate0b_sweep_20260410_082811.csv  gate0b_sweep_20260410_082811.txt  gate1b_sweep_20260410_084617.csv  gate1b_sweep_20260410_095254.csv  gate1b_sweep_20260410_095254.txt
demo/python/research/roughtemporal_intraday/: gate0_forecast_benchmark.py  gate0_sweep.py  gate1_sweep.py  gate2_sweep.py  gate4_sweep.py
demo/python/research/roughtemporal_intraday/output/: gate0_120min_20260409_091813.txt  gate0_120min_20260409_094543.txt  gate0_sweep_20260409_173410.csv  gate0_sweep_20260409_173410.txt  gate0_sweep_20260409_174933.csv  gate0_sweep_20260409_174933.txt  gate1_sweep_20260410_084844.txt  gate1_sweep_20260410_084910.csv  gate1_sweep_20260410_084910.txt  gate1_sweep_20260410_090610.csv  gate1_sweep_20260410_090610.txt
demo/python/research/shared/: robustness_sweeps.py  smile_pipeline.py  synthetic_smile.py
demo/python/research/skew_scaling/: benchmark.py  gate0a_sweep.py  gate1_sweep.py
demo/python/research/skew_scaling/output/: gate0a_sweep_20260409_201238.csv  skew_scaling_20260409_101742.txt  skew_scaling_20260409_111639.txt
demo/python/research/synthetic/: sanity_check.py
demo/python/research/tests/: smoke_test.py  test_robustness_sweeps.py
demo/python/validation/: bsde_hedge_validation.py
demo/python/visualize/: plot_pipeline.py
demo/scripts/: prepare_spy_data.py
lab/data/: __init__.py  yfinance_fetcher.py
lab/experiments/: real_data_experiment.py
lab/grpc_client/: rough_pricing_client.py
notes/: event.md  main.md
proto/: rough_pricing.proto
python/: hybrid_main.py
python/heritage/: main.py
python/heritage/application/: backtest_calibration_app.py  delta_hedger.py  quote_engine.py  realtime_risk_app.py
python/heritage/domain/: calibration_engine.py  instrument.py  portfolio_aggregate.py  position_manager.py  pricing_engine.py  risk_metrics.py  risk_policy.py
python/heritage/events/: event_bus.py  (+1 more)
python/hybrid_application/: __init__.py  backtest_calibration_app.py  delta_hedger.py  quote_engine.py  realtime_risk_app.py
src/: main.cpp
src/application/: BacktestCalibrationApp.cpp  BacktestCalibrationApp.hpp  DeltaHedger.cpp  DeltaHedger.hpp  QuoteEngine.cpp  QuoteEngine.hpp  Quote参数.md  RealtimeRiskApp.cpp  RealtimeRiskApp.hpp
src/bindings/: omm_bindings.cpp
src/domain/: Instrument.hpp  InstrumentFactory.cpp  InstrumentFactory.hpp  PortfolioAggregate.cpp  PortfolioAggregate.hpp  PositionManager.cpp  PositionManager.hpp  PricingEngine.cpp  PricingEngine.hpp  RiskMetrics.hpp  RiskPolicy.cpp  RiskPolicy.hpp
src/events/: EventBus.hpp  Events.hpp
src/infrastructure/: MarketDataAdapter.cpp  MarketDataAdapter.hpp  ModelServiceClient.cpp  ParameterStore.hpp  ProbabilisticTaker.cpp  ProbabilisticTaker.hpp
(+47 files in other folders)
